# dcc012b-lab03-sorting

./: .gitignore  CMakeLists.txt  README.md
siga/: CMakeLists.txt  config.h.in
siga/include/: estudante.h  metrics.h  siga.h  sort.h
siga/src/: estudante.cc  metrics.cc  siga.cc
tests/: CMakeLists.txt  compara.cc  test1.cc  test2.cc  test3.cc  test4.cc  test6.cc  test7.cc  test8.cc
